--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,7 @@ crashlytics-build.properties
 Packages/manifest.json
 Packages/packages-lock.json
 /Packages
+
+.idea/.idea.CSCD_439-Game-1/.idea/
+
+.vscode/
