--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,6 @@ crashlytics-build.properties
 Packages/manifest.json
 Packages/packages-lock.json
 /Packages
+.vscode/launch.json
+.vscode/extensions.json
+.vscode/settings.json
