--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,5 @@ Packages/packages-lock.json
 .vscode/launch.json
 .vscode/extensions.json
 .vscode/settings.json
+
+.idea/.idea.CSCD_439-Game-1/.idea/
